Manually inlined calls to `rethrow(Throwable)` as only Jacoco workaround
Pfft.